# javis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.fr.md  README.md  install_windows.ps1  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  windows-build.yml
docs/: ARCHITECTURE_V1.fr.md  ARCHITECTURE_V1.md  DATABASE_SERVICES_V1.fr.md  DATABASE_SERVICES_V1.md  FILE_OPERATIONS_V1.fr.md  FILE_OPERATIONS_V1.md  FILTER_OPERATION_V1.fr.md  FILTER_OPERATION_V1.md  FUNCTIONALITIES_V1.fr.md  FUNCTIONALITIES_V1.md  ORGANIZATION_SERVICE_V1.fr.md  ORGANIZATION_SERVICE_V1.md  SERVICE_DOC.fr.md  SERVICE_DOC.md
scripts/: check_coverage_threshold.py  install_git_hooks.sh
src/ai_content_classifier/: app_context.py  main.py
src/ai_content_classifier/controllers/: auto_organization_controller.py  categorization_controller.py  llm_controller.py  scan_controller.py
src/ai_content_classifier/core/: logger.py
src/ai_content_classifier/core/memory/: config.py
src/ai_content_classifier/db_migrations/: env.py
src/ai_content_classifier/db_migrations/versions/: 0001_baseline_schema.py
src/ai_content_classifier/models/: base.py  config_models.py  content_models.py  settings_models.py
src/ai_content_classifier/repositories/: config_repository.py  content_repository.py
src/ai_content_classifier/resources/i18n/: en.json  fr.json
src/ai_content_classifier/services/: auto_organization_service.py  config_service.py  content_database_service.py
src/ai_content_classifier/services/auto_organization/: __init__.py  service.py  types.py
src/ai_content_classifier/services/database/: __init__.py  content_database_service.py  content_reader.py  content_writer.py  database_service.py  migrations.py  query_optimizer.py  types.py  utils.py
src/ai_content_classifier/services/file/: file_operation_service.py  file_type_service.py  scan_models.py  scan_pipeline_service.py  types.py
src/ai_content_classifier/services/filtering/: __init__.py  content_filter_service.py  registry.py  types.py
src/ai_content_classifier/services/i18n/: __init__.py  i18n_service.py
src/ai_content_classifier/services/llm/: api_client.py  category_analyzer.py  llm_service.py  model_manager.py
src/ai_content_classifier/services/metadata/: metadata_service.py
src/ai_content_classifier/services/performance/: __init__.py  metrics.py
src/ai_content_classifier/themes/: __init__.py  base.py  presets.py  registry.py
src/ai_content_classifier/views/: main_view.py
tests/: conftest.py
tests/smoke/: test_ui_smoke.py
tests/unit/: conftest.py  test_app_context.py  test_main.py
tests/unit/controllers/: test_auto_organization_controller.py  test_categorization_controller.py  test_llm_controller.py  test_scan_controller.py
tests/unit/core/: test_logger.py
tests/unit/db_migrations/: test_migrations.py
tests/unit/models/: test_base.py  test_config_models.py  test_content_models.py  test_settings_models.py
tests/unit/repositories/: test_config_repository.py  test_content_repository.py
tests/unit/services/: test_auto_organization_operations.py  test_auto_organization_service.py  test_file_operation_service_db_removal.py  test_text_extraction_service.py
tests/unit/themes/: test_theme_registry.py
tests/unit/views/: test_adaptive_preview_widget.py  test_advanced_scan_dialog.py  test_auto_organize_dialog.py  test_categorization_dialog.py  test_file_details_dialog.py  test_file_hover_preview.py  test_file_manager.py  test_file_presenter.py  test_filter_sidebar.py  test_grid_debug_metrics.py  test_main_view_pipeline_integration.py  test_main_window_responsive.py  test_main_window_search.py  test_progress_panel.py  test_scan_progress_dialog.py  test_signal_router.py  test_theme_widgets.py  test_ui_event_handler.py
(+167 files in other folders)
